# factorio-learning-environment

./: .example.env  .gitignore  .pre-commit-config.yaml  BUILD.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  clean.sh  docker-compose.yml  et --hard 72c9ba25  prepare_build.py  pyproject.toml  pytest.ini  run.py  server.py  setup.cfg  setup.py  skills.db  validate_installation.py
.github/scripts/: process-results.js
.github/workflows/: deploy-leaderboard.yml  deploy-website.yml  factorio-test.yml  lint.yml  process-results.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  rename-leaderboard.yml
agents/: __init__.py  agent_abc.py  backtracking_agent.py  backtracking_system.py  basic_agent.py  example_agent.py  gym_agent.py  visual_agent.py
agents/utils/: __init__.py  llm_factory.py  metrics.py  parse_response.py  python_parser.py
cluster/local/: !README.md  create_docker_compose_config.py  docker-compose-1.yml  docker-compose-33.yml  run-envs.sh  setup_multiagent.py
cluster/remote/: factorio_server_login.py
data/: run_trace.py  screenshots_from_run.py
data/blueprints_to_policies/: blueprint_analyzer.py  blueprint_analyzer_with_connect.py  blueprint_analyzer_with_place_next_to.py  blueprint_refactor.py  loop_generator.py  trajectory_generator.py
data/plans/: plan_parser.py  prompts.py
docs/: index.html  release.0.2.0.html
docs/leaderboard/: README.md  asset-manifest.json  index.html  package.json  styles.css
docs/versions/: 0.1.0.html  0.2.0.html
env/src/: a2a_instance.py  a2a_namespace.py  entities.py  game_types.py  instance.py  llm_factory.py  lua_manager.py  namespace.py  requirements.txt
env/tests/: conftest.py  test_eval.py  test_functions.py  test_patterns.py  test_production_stats.py  test_rcon_utils.py  test_typing.py  test_variables.py  test_warnings.py
eval/: evaluator.py
eval/open/: MANUAL_short.md  db_client.py  factorio_evaluator.py  useful_info_for_tasks.md
eval/tasks/: default_task.py  open_play_task.py  task_abc.py  task_factory.py  task_utils.py  throughput_task.py  unbounded_throughput_task.py
examples/agents/: backtracking_agent.py  visual_agent.py
fle/: .example.env  __about__.py  __init__.py  run.py  server.py
fle/agents/: __init__.py  agent_abc.py  backtracking_agent.py  backtracking_system.py  basic_agent.py  gym_agent.py  models.py  visual_agent.py
fle/cluster/: docker-compose-linux.yml  docker-compose.yml
fle/commons/: cluster_ips.py  db_client.py
fle/env/: __init__.py  a2a_instance.py  a2a_namespace.py  entities.py  game_types.py  instance.py  lua_manager.py  namespace.py
fle/eval/: evaluator.py
leaderboard/: README.md  package-lock.json  package.json  readme.md  write_to_leaderboard.py
leaderboard/app/: page.tsx
leaderboard/components/: ModelLeaderboard.tsx
leaderboard/lib/: db.ts
leaderboard/processed/: combined-results.json
leaderboard/public/: index.html
leaderboard/results/: claude-3-5-sonnet.json  deepseek-chat.json  gemini-2.json  gpt-4o.json  llama-3.3-70b.json
leaderboard/src/: package-lock.json
server/: __init__.py  init.py  prompts.py  repository.py  resources.py  state.py  tools.py  unix_tools.py  version_control.py
src/: _factorio_runner.py  _utils.py  factorio_entities.py  factorio_instance.py  factorio_lua_script_manager.py  factorio_types.py  utils.py
src/actions/: connect_entities.lua  extend_collision_boxes.lua  extend_collision_boxes_old.lua  place_entity_next_to.lua
src/controllers/: __controller.py  _get_factory_centroid.py  connect_entities.py  get_prototype_recipe.py  observe_all.py
src/gym/: __init__.py  readme.md  utils.py
src/init/: alerts.lua
src/models/: memory.py
src/search/: MANUAL_short.md  factorio_evaluator.py
src/tests/: conftest.py  test_production_stats.py
src/utilities/: groupable_entities.py
tests/: conftest.py  test_eval.py  test_functions.py  test_production_stats.py  test_rcon_utils.py  test_variables.py  test_warnings.py
tests/actions/: _test_inspect_entities.py  _test_shift_entity.py  test_can_place.py  test_connect_entities_dry_run.py  test_craft.py  test_extract_item.py  test_get_entities.py  test_get_entity.py  test_get_prototype_recipe.py  test_get_research_progress.py  (+19 more)
(+996 files in other folders)
