[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorio-learning-environment"
version = "0.2.0rc3"
description = "Factorio Learning Environment"
authors = [
    {name = "Jack Hopkins", email = "noreply@github.com"},
    {name = "Mart Bakler", email = "noreply@github.com"},
    {name = "Neel Kant", email = "contact@neelkant.io"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.10.6",
    "lupa>=2.4",
    "slpp>=1.2.3",
    "factorio-rcon-py==1.2.1",
    "construct>=2.10.70",
    "pillow>=11.1.0",
    "tomli",
    "mcp[cli]",
    "numpy>=2.2.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
agents = [
    "anthropic>=0.49.0",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "tenacity>=9.0.0",
]
cluster = [
    "docker>=6.0.0",
    "boto3>=1.26.0",
]
eval = [
    "numpy>=2.2.3",
    "scikit-image>=0.25.2",
    "psycopg2>=2.9.10",
]
all = [
    "anthropic>=0.49.0",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "tenacity>=9.0.0",
    "docker>=6.0.0",
    "boto3>=1.26.0",
    "numpy>=2.2.3",
    "scikit-image>=0.25.2",
    "psycopg2>=2.9.10",
]
mcp = [
    "mcp[cli]",
    "dulwich"
]
env = [
    "factorio-rcon-py==1.2.1",
    "python-dotenv==1.0.1",
    "imageio",
    "anyio",
    "pygame",
    "neptune",
    "pyopenssl==24.0.0",
    "rich",
    "construct",
    "pydantic",
    "openai",
    "anthropic",
    "scipy",
    "scikit-image",
    "pyautogui",
    "lupa",
    "numpy",
    "pillow",
    "backoff",
    "tenacity",
    "pytest-asyncio",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.8.0",
    "a2a-sdk",
    # For slpp, use the git version since it's likely more up to date:
    "git+https://github.com/SirAnthony/slpp"
]

[project.scripts]
fle = "factorio_learning_environment.run:main"

[tool.setuptools]
packages = ["factorio_learning_environment"]

[tool.hatch.version]
path = "factorio_learning_environment/__about__.py"

[tool.hatch.build]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    ".git",
    ".DS_Store",
    "dist",
    "build",
    "**/*.egg-info",
]

[tool.hatch.build.targets.wheel]
packages = ["factorio_learning_environment"]
include-packages = true

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=factorio_learning_environment {args:tests}"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve"